--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ console.log(e);
 
 function search()
 {   
-   location.href = "https://www.google.com/search?q=site%3Ahttp%3A%2F%2Fhttp://www.hebrewbooks.org/shas.aspx "+"\""+conversion.saisie.value+"\"";
+   location.href = 'https://www.sefaria.org/search?q="'+conversion.saisie.value+'"&filters=Talmud&var=0";
 }
 
 </script>
