--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ console.log(e);
 
 function search()
 {   
-   location.href = 'https://www.sefaria.org/search?q="'+conversion.saisie.value+'"&filters=Talmud&var=0";
+   location.href = 'https://www.sefaria.org/search?q="'+conversion.saisie.value+'"&filters=Talmud&var=0';
 }
 
 </script>
