--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function search1()
 
 function search2()
 {   
-   location.href = 'https://www.sefaria.org/search?q="'+conversion.saisie.value+'"&filters=Tanach&var=0';
+   location.href = 'https://www.sefaria.org/search?q="'+conversion.saisie.value+'"&filters=Tanakh&var=0';
 }
 </script>
 
